--- a/BMI.css
+++ b/BMI.css
@@ -112,11 +112,23 @@ input,button{
   font-weight: 700;
 }
 
-.btn:hover{
+#calculate:hover{
   background:#1479ff;
   color: #f3f8ff;
 }
+#result:hover{
+  background:#4beb60;
+  color: #f3f8ff;
+  border: 2px solid #4beb60;
+}
+#reset:hover{
+  background:#eb3333;
+  color: #f3f8ff;
+  border: 2px solid #eb3333;
+}
 
 #calculate:active,#result:active,#reset:active{
-  height: 50px;
+  height: 40px;
+  width: 320px;
+  margin-top: 12.5px;
 }
